force-app/main/default/objects/VI_Parcours__c/VI_Parcours__c.object-meta.xml
<CustomObject>
    <description>Utilisé pour le parcours Pure Player du portail Partner Community</description>
    <label>Parcours</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Numéro du parcours</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>