force-app/main/default/objects/VI_Parcours__c/fields/DetailsVenteCompleter__c.field-meta.xml
<CustomField>
    <fullName>DetailsVenteCompleter__c</fullName>
    <description>Automatiquement renseigné avec la zone de commentaire sur le Case, remplit par le BO quand il met le motif &quot;En attente retour PP&quot;.</description>
    <label>Détails vente à compléter</label>
    <type>TextArea</type>
</CustomField>