force-app/main/default/objects/VI_Parcours__c/fields/ScriptDescription__c.field-meta.xml
<CustomField>
    <fullName>ScriptDescription__c</fullName>
    <label>ScriptDescription</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>