force-app/main/default/objects/VI_Parcours__c/fields/TECH_2_Nom_Partenaire__c.field-meta.xml
<CustomField>
    <fullName>TECH_2_Nom_Partenaire__c</fullName>
    <formula>SUBSTITUTE(Owner:User.Contact.Account.Name, &quot; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH 2 Nom Partenaire</label>
    <type>Text</type>
</CustomField>