force-app/main/default/objects/VI_Parcours__c/fields/Tech_IdentificationClientInitiee__c.field-meta.xml
<CustomField>
    <fullName>Tech_IdentificationClientInitiee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_IdentificationClientInitiee</label>
    <type>Checkbox</type>
</CustomField>