force-app/main/default/objects/VI_Parcours__c/fields/Tech_Nom_Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Tech_Nom_Partenaire__c</fullName>
    <formula>Owner:User.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Nom Partenaire</label>
    <type>Text</type>
</CustomField>