force-app/main/default/objects/VI_Parcours__c/fields/VI_Abonement_elec_HT__c.field-meta.xml
<CustomField>
    <fullName>VI_Abonement_elec_HT__c</fullName>
    <label>Abonement elec HT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>