force-app/main/default/objects/VI_Parcours__c/fields/VI_AbonnementAnnuelGazTTCPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_AbonnementAnnuelGazTTCPanierClient__c</fullName>
    <description>Champ pour affichage du détail du prix pour l&apos;abonnement annuel gaz TTC</description>
    <label>Abonnement annuel gaz TTC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>