force-app/main/default/objects/VI_Parcours__c/fields/VI_AccordClientRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_AccordClientRechercheLocal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ de recherche local par PDL/PCE. Texte à afficher pour l&apos;accord client : &quot;Accord client pour accéder aux données de son compteur&quot;</description>
    <inlineHelpText>Avant de lancer la recherche, le client doit donner son accord pour accéder aux données de son compteur.</inlineHelpText>
    <label>Accord Client</label>
    <type>Checkbox</type>
</CustomField>