force-app/main/default/objects/VI_Parcours__c/fields/VI_AdresseDeConsoIdentique__c.field-meta.xml
<CustomField>
    <fullName>VI_AdresseDeConsoIdentique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si cette case est cochée alors l&apos;adresse du client et la même que celle de son local.</description>
    <inlineHelpText>Si l&apos;étape identification local est complétée et qu&apos;on recherche le local par adresse alors cette case apparait afin de préremplir automatiquement les champs de recherche par l&apos;adresse du client.</inlineHelpText>
    <label>Adresse de consommation identique</label>
    <type>Checkbox</type>
</CustomField>