force-app/main/default/objects/VI_Parcours__c/fields/VI_AF_Enregistre__c.field-meta.xml
<CustomField>
    <fullName>VI_AF_Enregistre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assurance Facture Enregistrée</label>
    <type>Checkbox</type>
</CustomField>