force-app/main/default/objects/VI_Parcours__c/fields/VI_AjustementMensualitesPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_AjustementMensualitesPanierClient__c</fullName>
    <description>Champ pour affichage du lien vers l&apos;ajustement des mensualités</description>
    <label>Ajustement mensualités</label>
    <length>255</length>
    <type>Text</type>
</CustomField>