force-app/main/default/objects/VI_Parcours__c/fields/VI_AnneeConstructionLogementSaisieConso__c.field-meta.xml
<CustomField>
    <fullName>VI_AnneeConstructionLogementSaisieConso__c</fullName>
    <description>Le PP choisi, en fonction du prospect au téléphone ; l&apos;année de construction du logement</description>
    <label>Année de construction du logement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avant 1975</fullName>
            </value>
            <value>
                <fullName>Entre 1975 et 1988</fullName>
            </value>
            <value>
                <fullName>Entre 1989 et 1999</fullName>
            </value>
            <value>
                <fullName>Entre 2000 et 2005</fullName>
            </value>
            <value>
                <fullName>Après 2005</fullName>
            </value>
            <value>
                <fullName>Je ne sais pas</fullName>
                <default>true</default>
                <label>Je ne sais pas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>