force-app/main/default/objects/VI_Parcours__c/fields/VI_AppartientA_MonSite__c.field-meta.xml
<CustomField>
    <fullName>VI_AppartientA_MonSite__c</fullName>
    <formula>IF(TEXT(Owner:User.Contact.VI_Prestataire__c) == $User.VI_PrestatairePartnerCommunity__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appartient à mon site</label>
    <type>Checkbox</type>
</CustomField>