force-app/main/default/objects/VI_Parcours__c/fields/VI_ArretDeTravailPourRaisonDeSanteAF__c.field-meta.xml
<CustomField>
    <fullName>VI_ArretDeTravailPourRaisonDeSanteAF__c</fullName>
    <label>Arrêt de travail pour raison de santé</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>