force-app/main/default/objects/VI_Parcours__c/fields/VI_AssuranceFactureCocheeAF__c.field-meta.xml
<CustomField>
    <fullName>VI_AssuranceFactureCocheeAF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assurance facture cochée</label>
    <type>Checkbox</type>
</CustomField>