force-app/main/default/objects/VI_Parcours__c/fields/VI_BoutonCreerNouveauClientClique__c.field-meta.xml
<CustomField>
    <fullName>VI_BoutonCreerNouveauClientClique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ technique pour afficher ou non par défaut la fiche de création lorsqu&apos;on retourne sur l&apos;étape Identification client.</description>
    <label>Bouton Créer nouveau client cliqué</label>
    <type>Checkbox</type>
</CustomField>