force-app/main/default/objects/VI_Parcours__c/fields/VI_CAEElec__c.field-meta.xml
<CustomField>
    <fullName>VI_CAEElec__c</fullName>
    <description>Champ technique (estimation de lirePDL). Necessaire pour le lancement des prix et remises pour remplir les tableaux annexes des CPV</description>
    <label>CAE Elec</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>