force-app/main/default/objects/VI_Parcours__c/fields/VI_CanalDeVente2__c.field-meta.xml
<CustomField>
    <fullName>VI_CanalDeVente2__c</fullName>
    <label>Canal De Vente 2</label>
    <type>TextArea</type>
</CustomField>