force-app/main/default/objects/VI_Parcours__c/fields/VI_CanalDeVente__c.field-meta.xml
<CustomField>
    <fullName>VI_CanalDeVente__c</fullName>
    <label>Canal De Vente</label>
    <type>TextArea</type>
</CustomField>