force-app/main/default/objects/VI_Parcours__c/fields/VI_Case__c.field-meta.xml
<CustomField>
    <fullName>VI_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Parcours</relationshipLabel>
    <relationshipName>Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>