force-app/main/default/objects/VI_Parcours__c/fields/VI_CategorieSocioprofessionnelleAF__c.field-meta.xml
<CustomField>
    <fullName>VI_CategorieSocioprofessionnelleAF__c</fullName>
    <label>Catégorie socioprofessionnelle (CSP)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculteur exploitant</fullName>
            </value>
            <value>
                <fullName>Artisan commerçant chef d&apos;entr.</fullName>
            </value>
            <value>
                <fullName>Cadre profession intellect</fullName>
            </value>
            <value>
                <fullName>Profession intermédiaire</fullName>
            </value>
            <value>
                <fullName>Employé</fullName>
            </value>
            <value>
                <fullName>Ouvrier</fullName>
            </value>
            <value>
                <fullName>Retraité</fullName>
            </value>
            <value>
                <fullName>Sans activité prof</fullName>
            </value>
            <value>
                <fullName>Ne veut pas répondre</fullName>
            </value>
            <value>
                <fullName>NSP</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>