force-app/main/default/objects/VI_Parcours__c/fields/VI_ChoixEnergie__c.field-meta.xml
<CustomField>
    <fullName>VI_ChoixEnergie__c</fullName>
    <description>Le prospect au téléphone souhaite utiliser de l&apos;électricité verte, du gaz naturel ou du dual (gaz naturel + Electricité verte)</description>
    <label>Choix de l&apos;énergie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Gaz</fullName>
            </value>
            <value>
                <fullName>Electricité + Gaz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>