force-app/main/default/objects/VI_Parcours__c/fields/VI_ChoixEstimation__c.field-meta.xml
<CustomField>
    <fullName>VI_ChoixEstimation__c</fullName>
    <label>Choix de l&apos;estimation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saisir la consommation d&apos;énergie</fullName>
            </value>
            <value>
                <fullName>Estimer la consommation d&apos;énergie</fullName>
                <default>true</default>
                <label>Estimer la consommation d&apos;énergie</label>
            </value>
            <value>
                <fullName>Passer cette étape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>