force-app/main/default/objects/VI_Parcours__c/fields/VI_ChoixMoyenPaiement__c.field-meta.xml
<CustomField>
    <fullName>VI_ChoixMoyenPaiement__c</fullName>
    <description>Champ étape saisie moyens de paiement pour le choix du moyen de paiement</description>
    <label>Choix moyen de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prélèvement automatique</fullName>
                <default>true</default>
                <label>Prélèvement automatique</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>