force-app/main/default/objects/VI_Parcours__c/fields/VI_ChoixOffrePourcentageOffreVerte__c.field-meta.xml
<CustomField>
    <fullName>VI_ChoixOffrePourcentageOffreVerte__c</fullName>
    <description>Uniquement pour Elec - champ technique (produits Salesforce). Nécessaire pour le lancement des prix et remises pour remplir les tableaux annexes des CPV</description>
    <label>Choix Offre Pourcentage Offre Verte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>