force-app/main/default/objects/VI_Parcours__c/fields/VI_ChoixOffreSurParcoursPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_ChoixOffreSurParcoursPanierClient__c</fullName>
    <description>Champ pour le choix de l&apos;offre du parcours</description>
    <label>Choix offre sur parcours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offre poussée</fullName>
            </value>
            <value>
                <fullName>Offre de repli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>