force-app/main/default/objects/VI_Parcours__c/fields/VI_ChoixParcours__c.field-meta.xml
<CustomField>
    <fullName>VI_ChoixParcours__c</fullName>
    <description>Le prospect au téléphone effectue soit un changement de fournisseur (même adresse cible) soit un emménagement (nouvelle adresse)</description>
    <label>Choix de la situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EM</fullName>
                <label>Emménager dans un nouveau logement</label>
            </value>
            <value>
                <fullName>CHF</fullName>
                <label>Changer de fournisseur pour Engie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>