force-app/main/default/objects/VI_Parcours__c/fields/VI_ChoixTransfertAppel__c.field-meta.xml
<CustomField>
    <fullName>VI_ChoixTransfertAppel__c</fullName>
    <label>Choix du transfert d&apos;appel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfert à COMDATA - Mise en service urgente</fullName>
                <default>true</default>
                <label>Transfert à COMDATA - Mise en service urgente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>