force-app/main/default/objects/VI_Parcours__c/fields/VI_CiviliteAF__c.field-meta.xml
<CustomField>
    <fullName>VI_CiviliteAF__c</fullName>
    <label>Civilité</label>
    <length>20</length>
    <type>Text</type>
</CustomField>