force-app/main/default/objects/VI_Parcours__c/fields/VI_CiviliteClient__c.field-meta.xml
<CustomField>
    <fullName>VI_CiviliteClient__c</fullName>
    <description>Champ de recherche et de création client</description>
    <label>Civilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madame</fullName>
            </value>
            <value>
                <fullName>Monsieur</fullName>
            </value>
            <value>
                <fullName>Co-titulaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>