force-app/main/default/objects/VI_Parcours__c/fields/VI_CiviliteClientExistant__c.field-meta.xml
<CustomField>
    <fullName>VI_CiviliteClientExistant__c</fullName>
    <formula>TEXT(VI_Contact__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Civilité client existant</label>
    <type>Text</type>
</CustomField>