force-app/main/default/objects/VI_Parcours__c/fields/VI_Code_FTA_Offre__c.field-meta.xml
<CustomField>
    <fullName>VI_Code_FTA_Offre__c</fullName>
    <label>Code FTA Offre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>