force-app/main/default/objects/VI_Parcours__c/fields/VI_Code_pack__c.field-meta.xml
<CustomField>
    <fullName>VI_Code_pack__c</fullName>
    <description>Sauvegarde de l&apos;ID du pack de l&apos;offre choisie</description>
    <label>Id Pack</label>
    <length>80</length>
    <type>Text</type>
</CustomField>