force-app/main/default/objects/VI_Parcours__c/fields/VI_CodeCommuneIdentificationLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_CodeCommuneIdentificationLocal__c</fullName>
    <description>Code commune relié à la commune à l&apos;étape Identification local</description>
    <label>Code commune identification local</label>
    <length>5</length>
    <type>Text</type>
</CustomField>