force-app/main/default/objects/VI_Parcours__c/fields/VI_CodeOptionGazPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_CodeOptionGazPanierClient__c</fullName>
    <description>Champ pour stockage du code de l&apos;option gaz</description>
    <label>Code option gaz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>