force-app/main/default/objects/VI_Parcours__c/fields/VI_CodeOptionPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_CodeOptionPanierClient__c</fullName>
    <description>Champ pour stockage du code de l&apos;option elec</description>
    <label>Code option elec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>