force-app/main/default/objects/VI_Parcours__c/fields/VI_CodePostalClient__c.field-meta.xml
<CustomField>
    <fullName>VI_CodePostalClient__c</fullName>
    <description>Champ de création client - Adresse de facturation</description>
    <label>Code postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>