force-app/main/default/objects/VI_Parcours__c/fields/VI_CodePostalNaissanceAF__c.field-meta.xml
<CustomField>
    <fullName>VI_CodePostalNaissanceAF__c</fullName>
    <label>Code postal de naissance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>