force-app/main/default/objects/VI_Parcours__c/fields/VI_CodePostalRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_CodePostalRechercheLocal__c</fullName>
    <description>Champ de recherche local par adresse</description>
    <label>Code postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>