force-app/main/default/objects/VI_Parcours__c/fields/VI_CodePromo2__c.field-meta.xml
<CustomField>
    <fullName>VI_CodePromo2__c</fullName>
    <label>Code Promo 2</label>
    <type>TextArea</type>
</CustomField>