force-app/main/default/objects/VI_Parcours__c/fields/VI_CodePromo__c.field-meta.xml
<CustomField>
    <fullName>VI_CodePromo__c</fullName>
    <label>Code Promo</label>
    <type>TextArea</type>
</CustomField>