force-app/main/default/objects/VI_Parcours__c/fields/VI_CodePromoApplied2__c.field-meta.xml
<CustomField>
    <fullName>VI_CodePromoApplied2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Un deuxième code promo a été appliqué</description>
    <label>Code Promo Appliqué 2</label>
    <type>Checkbox</type>
</CustomField>