force-app/main/default/objects/VI_Parcours__c/fields/VI_CodePromoApplied__c.field-meta.xml
<CustomField>
    <fullName>VI_CodePromoApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Un code promo a été appliqué sur ce parcours</description>
    <label>Code Promo Appliqué</label>
    <type>Checkbox</type>
</CustomField>