force-app/main/default/objects/VI_Parcours__c/fields/VI_CodePromotionnelPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_CodePromotionnelPanierClient__c</fullName>
    <description>Champ de saisie du code promotionnel</description>
    <label>Code promotionnel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>