force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentaireGeneral_Constitutionpanier__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentaireGeneral_Constitutionpanier__c</fullName>
    <description>Zone de commentaire général pour l&apos;étape Constitution du panier</description>
    <label>Commentaire général Constitution panier</label>
    <type>TextArea</type>
</CustomField>