force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentaireGeneral_EstimationConso__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentaireGeneral_EstimationConso__c</fullName>
    <description>Zone de commentaire général pour l&apos;étape estimation de la consommation</description>
    <label>Commentaire général Estimation conso</label>
    <type>TextArea</type>
</CustomField>