force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentaireGeneral_idbesoin__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentaireGeneral_idbesoin__c</fullName>
    <description>Zone de commentaire général pour l&apos;étape identification besoin</description>
    <label>Commentaire général Identificationbesoin</label>
    <type>TextArea</type>
</CustomField>