force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentaireGeneral_idclient__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentaireGeneral_idclient__c</fullName>
    <description>Zone de commentaire général pour l&apos;étape identification client</description>
    <label>Commentaire général Identificationclient</label>
    <type>TextArea</type>
</CustomField>