force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentaireGeneral_idlocal__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentaireGeneral_idlocal__c</fullName>
    <description>Zone de commentaire général pour l&apos;étape identification local</description>
    <label>Commentaire général Identification local</label>
    <type>TextArea</type>
</CustomField>