force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentaireGeneral_InfosCompl__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentaireGeneral_InfosCompl__c</fullName>
    <description>Zone de commentaire général pour l&apos;étape informations complémentaires</description>
    <label>Commentaire général infoscomplémentaire</label>
    <type>TextArea</type>
</CustomField>