force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentaireGeneral_MoyensPaiement__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentaireGeneral_MoyensPaiement__c</fullName>
    <description>Zone de commentaire général pour l&apos;étape Saisie moyens de paiement</description>
    <label>Commentaire général Moyens de paiement</label>
    <type>TextArea</type>
</CustomField>