force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentairesAnnulerParcours__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentairesAnnulerParcours__c</fullName>
    <description>Zone de commentaires en complément du bouton annuler le parcours</description>
    <label>Commentaires Annuler le parcours</label>
    <type>TextArea</type>
</CustomField>