force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentairesParcours__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentairesParcours__c</fullName>
    <label>Commentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>