force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentairesReprendreParcours__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentairesReprendreParcours__c</fullName>
    <description>Zone de commentaires en complément du bouton reprendre le parcours plus tard</description>
    <label>Commentaires Reprendre le parcours</label>
    <type>TextArea</type>
</CustomField>