force-app/main/default/objects/VI_Parcours__c/fields/VI_CommentairesTransfertAppel__c.field-meta.xml
<CustomField>
    <fullName>VI_CommentairesTransfertAppel__c</fullName>
    <description>Zone de commentaires en complément du bouton transfert d&apos;appel</description>
    <label>Commentaires Transfert d&apos;appel</label>
    <type>TextArea</type>
</CustomField>