force-app/main/default/objects/VI_Parcours__c/fields/VI_CommuneClient__c.field-meta.xml
<CustomField>
    <fullName>VI_CommuneClient__c</fullName>
    <description>Champ de création client - Adresse de facturation</description>
    <label>Commune</label>
    <type>TextArea</type>
</CustomField>