force-app/main/default/objects/VI_Parcours__c/fields/VI_CommuneRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_CommuneRechercheLocal__c</fullName>
    <description>Champ de recherche local par adresse</description>
    <label>Commune</label>
    <type>TextArea</type>
</CustomField>