force-app/main/default/objects/VI_Parcours__c/fields/VI_CompteClient__c.field-meta.xml
<CustomField>
    <fullName>VI_CompteClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parcours</relationshipLabel>
    <relationshipName>Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>