force-app/main/default/objects/VI_Parcours__c/fields/VI_CompteurCommunicantLinkySaisieConso__c.field-meta.xml
<CustomField>
    <fullName>VI_CompteurCommunicantLinkySaisieConso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partie Saisie consommation</description>
    <label>Compteur communicant Linky Saisie conso</label>
    <type>Checkbox</type>
</CustomField>