force-app/main/default/objects/VI_Parcours__c/fields/VI_ConsentProspectionPartenaire__c.field-meta.xml
<CustomField>
    <fullName>VI_ConsentProspectionPartenaire__c</fullName>
    <label>Consent prospection partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>