force-app/main/default/objects/VI_Parcours__c/fields/VI_Consomation_elec_HP_HT__c.field-meta.xml
<CustomField>
    <fullName>VI_Consomation_elec_HP_HT__c</fullName>
    <label>Consomation elec HP HT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>