force-app/main/default/objects/VI_Parcours__c/fields/VI_ConsommationGazKwHSaisieConso__c.field-meta.xml
<CustomField>
    <fullName>VI_ConsommationGazKwHSaisieConso__c</fullName>
    <description>Champ de saisie de la consommation annuelle gaz en Kwh</description>
    <label>Consommation annuelle en gaz</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>