force-app/main/default/objects/VI_Parcours__c/fields/VI_Contact__c.field-meta.xml
<CustomField>
    <fullName>VI_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contient le contact utilisé dans ce parcours</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parcours</relationshipLabel>
    <relationshipName>Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>