force-app/main/default/objects/VI_Parcours__c/fields/VI_Date_Heure_envoi_email__c.field-meta.xml
<CustomField>
    <fullName>VI_Date_Heure_envoi_email__c</fullName>
    <label>Date et Heure d&apos;envoi d&apos;email</label>
    <type>DateTime</type>
</CustomField>